commented some code and tested it for 1 and 3 nodes over the same script

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,17 +1,17 @@
-- hosts: Node1
+- hosts: all
  
   tasks:
     - name: Run Zookeeper
       script: ./zookeeper.sh 10.5.48.138 10.5.48.48 10.5.48.208
 
-- hosts: Node1
+- hosts: all
  
   tasks:
     - name: Run Zookeeper
       script: ./kafka.sh 10.5.48.138 10.5.48.48 10.5.48.208
 
 
-- hosts: Node1
+- hosts: all
  
   tasks:
     - name: Run Zookeeper
