--- a/playbook.yml
+++ b/playbook.yml
@@ -1,25 +1,33 @@
-# {% for ip in "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4','address']) | list }}" %} {{ ip }} {% endfor %}
+# # {% for ip in "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4','address']) | list }}" %} {{ ip }} {% endfor %}
 
-- hosts: all
-  roles:
-    - Docker
+# - hosts: all
+#   become: yes
+#   become_user: root
+#   roles:
+#     - Docker
+
+  
+# - hosts: all
+#   tasks:
+#     - name: Start Docker Service
+#       script: ./start_docker_service.sh
     
 
 - hosts: all
   tasks:
     - name: Run Zookeeper
-      script: ./zookeeper.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./zookeeper.sh 172.31.0.114
 
 - hosts: all
   tasks:
     - name: Run Kafka
-      script: ./kafka.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./kafka.sh 172.31.0.114
 
 
 - hosts: all
   tasks:
     - name: Run Schema Registry
-      script: ./schema-registry.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./schema-registry.sh 172.31.0.114
 
 
 
@@ -27,15 +35,14 @@
  
   tasks:
     - name: Create Kafka Topic in Node 1
-      script: ./create-kafka-topic.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./create-kafka-topic.sh 172.31.0.114
 
 
 - hosts: Node1
  
   tasks:
     - name: Run Kafka Connect
-      script: ./kafka-connect.sh 10.5.48.138 10.5.48.48 10.5.48.208
-
+      script: ./kafka-connect.sh 172.31.0.114
 
 
 # - hosts: Node1
