--- a/playbook.yml
+++ b/playbook.yml
@@ -1,27 +1,27 @@
 # # {% for ip in "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4','address']) | list }}" %} {{ ip }} {% endfor %}
 
-# - hosts: all
-#   become: yes
-#   become_user: root
-#   roles:
-#     - Docker
+- hosts: all
+  become: yes
+  become_user: root
+  roles:
+    - Docker
 
   
-# - hosts: all
-#   tasks:
-#     - name: Start Docker Service
-#       script: ./start_docker_service.sh
+- hosts: all
+  tasks:
+    - name: Start Docker Service
+      script: ./start_docker_service.sh
     
 
 - hosts: all
   tasks:
     - name: Run Zookeeper
-      script: ./zookeeper.sh 172.31.0.114
+      script: ./zookeeper.sh 172.31.19.189
 
 - hosts: all
   tasks:
     - name: Run Kafka
-      script: ./kafka.sh 172.31.0.114
+      script: ./kafka.sh 3.0.209.191
 
 
 - hosts: all
@@ -35,14 +35,14 @@
  
   tasks:
     - name: Create Kafka Topic in Node 1
-      script: ./create-kafka-topic.sh 172.31.0.114
+      script: ./create-kafka-topic.sh 3.0.209.191
 
 
-- hosts: Node1
+# - hosts: Node1
  
-  tasks:
-    - name: Run Kafka Connect
-      script: ./kafka-connect.sh 172.31.0.114
+#   tasks:
+#     - name: Run Kafka Connect
+#       script: ./kafka-connect.sh 172.31.0.114
 
 
 # - hosts: Node1
