--- a/playbook.yml
+++ b/playbook.yml
@@ -1,33 +1,33 @@
 # # {% for ip in "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4','address']) | list }}" %} {{ ip }} {% endfor %}
 
-- hosts: all
-  become: yes
-  become_user: root
-  roles:
-    - Docker
+# - hosts: all
+#   become: yes
+#   become_user: root
+#   roles:
+#     - Docker
 
   
-- hosts: all
-  tasks:
-    - name: Start Docker Service
-      script: ./start_docker_service.sh
+# - hosts: all
+#   tasks:
+#     - name: Start Docker Service
+#       script: ./start_docker_service.sh
     
 
 - hosts: all
   tasks:
     - name: Run Zookeeper
-      script: ./zookeeper.sh 172.31.19.189
+      script: ./zookeeper.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 - hosts: all
   tasks:
     - name: Run Kafka
-      script: ./kafka.sh 3.0.209.191
+      script: ./kafka.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 
 - hosts: all
   tasks:
     - name: Run Schema Registry
-      script: ./schema-registry.sh 172.31.0.114
+      script: ./schema-registry.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 
 
@@ -35,7 +35,7 @@
  
   tasks:
     - name: Create Kafka Topic in Node 1
-      script: ./create-kafka-topic.sh 3.0.209.191
+      script: ./create-kafka-topic.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 
 # - hosts: Node1
