--- a/playbook.yml
+++ b/playbook.yml
@@ -1,40 +1,40 @@
 # {% for ip in "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4','address']) | list }}" %} {{ ip }} {% endfor %}
 
-- hosts: all
-  roles:
-    - Docker
+# - hosts: all
+#   roles:
+#     - Docker
     
 
 - hosts: all
   tasks:
     - name: Run Zookeeper
-      script: ./zookeeper.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./zookeeper.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 - hosts: all
   tasks:
     - name: Run Kafka
-      script: ./kafka.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./kafka.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 
 - hosts: all
   tasks:
     - name: Run Schema Registry
-      script: ./schema-registry.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./schema-registry.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 
 
-- hosts: Node1
+# - hosts: Node1
  
-  tasks:
-    - name: Create Kafka Topic in Node 1
-      script: ./create-kafka-topic.sh 10.5.48.138 10.5.48.48 10.5.48.208
+#   tasks:
+#     - name: Create Kafka Topic in Node 1
+#       script: ./create-kafka-topic.sh 10.5.48.138 10.5.48.48 10.5.48.208
 
 
-- hosts: Node1
+- hosts: all
  
   tasks:
     - name: Run Kafka Connect
-      script: ./kafka-connect.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./kafka-connect.sh 10.0.1.70
 
 
 
