--- a/playbook.yml
+++ b/playbook.yml
@@ -18,41 +18,41 @@
 - hosts: all
   tasks:
     - name: Run Zookeeper
-      script: ./zookeeper.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./zookeeper.sh 10.0.1.70 10.0.1.212 10.0.1.94 10.0.1.187 10.0.1.250
 
 - hosts: all
   tasks:
     - name: Run Kafka
-      script: ./kafka.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./kafka.sh 10.0.1.70 10.0.1.212 10.0.1.94 10.0.1.187 10.0.1.250
 
 
 - hosts: all
   tasks:
     - name: Run Schema Registry
-      script: ./schema-registry.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./schema-registry.sh 10.0.1.70 10.0.1.212 10.0.1.94 10.0.1.187 10.0.1.250
 
 
 
-- hosts: Node1
+- hosts: [Node1]
  
   tasks:
     - name: Create Kafka Topic in Node 1
-      script: ./create-kafka-topic.sh 10.5.48.138 10.5.48.48 10.5.48.208
+      script: ./create-kafka-topic.sh 10.0.1.70 10.0.1.212 10.0.1.94 10.0.1.187 10.0.1.250
 
 
 - hosts: [Node1]
  
   tasks:
     - name: Run Kafka Connect
-      script: ./kafka-connect.sh 10.0.1.70
+      script: ./kafka-connect.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
   tasks:
     - name: Create Kafka Topic in Node 1
       script: ./create-kafka-topic.sh 10.0.1.70 10.0.1.212 10.0.1.94
 
 
-# - hosts: Node1
+- hosts: [Node1]
  
-#   tasks:
-#     - name: Create Sink Connector 10.5.48.48 10.5.48.208
-#       script: ./create-sink.sh
+  tasks:
+    - name: Create Sink Connector in 1 node
+      script: ./create-sink.sh
