--- a/hosts.ini
+++ b/hosts.ini
@@ -11,9 +11,9 @@
 10.0.1.94 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
 
 
-; [Node4]
-; 10.0.1.187 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
+[Node4]
+10.0.1.187 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
 
 
-; [Node5]
-; 10.0.1.250 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
+[Node5]
+10.0.1.250 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
