fixed kafka-connect in distibuted mode alonk with sink

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,19 +1,18 @@
 [Node1]
-10.0.1.70 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
-
+10.0.1.70 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@13.229.157.196"'
 
 
 [Node2]
-10.0.1.212 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
+10.0.1.212 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@13.229.157.196"'
 
 
 [Node3]
-10.0.1.94 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
+10.0.1.94 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@13.229.157.196"'
 
 
-[Node4]
-10.0.1.187 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
+; [Node4]
+; 10.0.1.187 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@13.229.157.196"'
 
 
-[Node5]
-10.0.1.250 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@3.1.27.170"'
+; [Node5]
+; 10.0.1.250 ansible_user=centos ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q ubuntu@13.229.157.196"'
