fully functional docker setup

--- a/playbook.yml
+++ b/playbook.yml
@@ -12,41 +12,51 @@
     - name: Start Docker Service
       script: ./start_docker_service.sh
 
-
 # Download JDBC Postgres
 - hosts: all
   tasks:
     - name: Download JDBC Server
       script: ./download_jdbc.sh
-    
 
 - hosts: all
   tasks:
+    - name: Wait for dockers to start
+      wait_for:
+        path: /var/run/docker.sock
     - name: Run Zookeeper
-      script: ./zookeeper.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./zookeeper.sh 10.0.1.167 10.0.1.172 10.0.1.128
 
 - hosts: all
   tasks:
+    - name: Wait for dockers to start
+      wait_for:
+        path: /var/run/docker.sock
     - name: Run Kafka
-      script: ./kafka.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./kafka.sh 10.0.1.167 10.0.1.172 10.0.1.128
 
 
 - hosts: [Node1]
 
   tasks:
     - name: Create Kafka Topic in Node 1
-      script: ./create-kafka-topic.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./create-kafka-topic.sh 10.0.1.167 10.0.1.172 10.0.1.128
 
 - hosts: all
   tasks:
+    - name: Wait for dockers to start
+      wait_for:
+        path: /var/run/docker.sock    
     - name: Run Schema Registry
-      script: ./schema-registry.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./schema-registry.sh 10.0.1.167 10.0.1.172 10.0.1.128
 
 
 - hosts: all
   tasks:
+    - name: Wait for dockers to start
+      wait_for:
+        path: /var/run/docker.sock    
     - name: Run Kafka Connect
-      script: ./kafka-connect.sh 10.0.1.70 10.0.1.212 10.0.1.94
+      script: ./kafka-connect.sh 10.0.1.167 10.0.1.172 10.0.1.128
 
 
 - hosts: all
